--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,18 @@
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.footer-wrapper {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px
+}
+
 .center-container {
     display: flex;
     flex-direction: column;
@@ -20,4 +35,14 @@
 .login-message {
     font-size: 15px;
     color: red;
+}
+
+.custom-login-button {
+    background-color: #7c4dff;
+    color: #fff;
+}
+
+.custom-register-button {
+    background-color: #1c2331;
+    color: #fff
 }
