--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -5,8 +5,8 @@
 <div class="center-container">
     <h1 class="center-text">HANGMAN</h1>
     <div class="center-buttons">
-        <a href="/login" class="btn btn-primary btn-lg">Login</a>
-        <a href="/register" class="btn btn-secondary btn-lg">Register</a>
+        <a href="/login" class="btn btn-lg custom-login-button">Login</a>
+        <a href="/register" class="btn btn-lg custom-register-button">Register</a>
     </div>
 </div>
 {% endblock %}
