--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,9 +5,9 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Login</legend>
+            <legend class="border-bottom mb-4 ">Login</legend>
             <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
+                {{ form.username.label(class="form-control-label ") }}
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -39,7 +39,7 @@
         </fieldset>
         <div class="form-group">
 
-            {{ form.submit(class="btn btn-outline-info") }}
+            {{ form.submit(class="btn custom-login-button") }}
             {% for message in get_flashed_messages() %}
             <h2 class="login-message">{{ message }}</h2>
             {% endfor %}
