Added more templates, two more routes for the game and some utilities

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -4,6 +4,8 @@
 
 <div class="center-container">
     <h1 class="center-text">HANGMAN</h1>
+    <legend class="center-text" style="font-size:xx-large">Animal edition</legend>
+    </legend>
     <div class="center-buttons">
         <a href="/login" class="btn btn-lg custom-login-button">Login</a>
         <a href="/register" class="btn btn-lg custom-register-button">Register</a>
