--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -95,7 +95,7 @@
 </div>
 <div class="border-top pt-3">
     <small class="text-muted">
-        Already Have An Account? <a class="ml-2" href="{{ url_for('user_login') }}">Login</a>
+        Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Login</a>
     </small>
 </div>
 
