--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -37,6 +37,11 @@ body {
     color: red;
 }
 
+.register-message {
+    font-size: 15px;
+    color: green;
+}
+
 .custom-login-button {
     background-color: #7c4dff;
     color: #fff;
@@ -45,4 +50,83 @@ body {
 .custom-register-button {
     background-color: #1c2331;
     color: #fff
+}
+
+.content-info {
+    background: #f9f9f9;
+    padding: 40px 0;
+    background-size: cover !important;
+    background-position: top center !important;
+    background-repeat: no-repeat !important;
+    position: relative;
+    padding-bottom: 100px;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #dedede;
+}
+
+table thead tr th {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    border: 1px solid #dedede;
+    color: #000;
+}
+
+table.table-striped tbody tr:nth-of-type(odd) {
+    margin-left: auto;
+    margin-right: auto;
+    background: #f9f9f9;
+}
+
+table.result-point tr td.number {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    position: relative;
+}
+
+.text-left {
+    text-align: left !important;
+}
+
+table tr td {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 20px;
+    border: 1px solid #dedede;
+}
+
+table.result-point tr td .fa {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    position: absolute;
+    right: 20px;
+}
+
+table tr td {
+    padding: 10px 40px;
+    border: 1px solid #dedede;
+}
+
+table tr td img {
+    max-width: 32px;
+    float: left;
+    margin-right: 11px;
+    margin-top: 1px;
+    border: 1px solid #dedede;
+}
+
+.center-div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
 }
