--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,12 +21,12 @@
 <body>
 
     <div class="content-wrapper">
-        <nav class="navbar navbar-expand-lg static-top text-white" style="background-color: #6351ce">
+        <nav class="navbar navbar-expand-lg static-top text-white" style="background-color: #1c2331">
             <div class="container">
                 {% if current_user.is_authenticated %}
-                <a class="navbar-brand ms-auto text-white" href="/">HOME</a>
+                <a class="navbar-brand ms-auto text-white" href="/home">HOME</a>
                 {% else %}
-                <a class="navbar-brand ms-auto text-white" href="/landing_page">HOME</a>
+                <a class="navbar-brand ms-auto text-white" href="/">HOME</a>
                 {% endif %}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,10 +40,10 @@
                             <a class="nav-link">|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/">LEADERBOARDS</a>
+                            <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/Account">Account</a>
+                            <a class="nav-link text-white" href="/account">Account</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="/logout">Logout</a>
@@ -53,7 +53,7 @@
                             <a class="nav-link">|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/">LEADERBOARDS</a>
+                            <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
                         </li>
                         {% endif %}
                         <li class="nav-item">
@@ -72,7 +72,7 @@
     <div class="footer-wrapper">
         <footer class="text-lg-start text-white" style="background-color: #1c2331">
             <div class="container">
-                <section class="d-flex justify-content-between p-2" style="background-color: #6351ce">
+                <section class="d-flex justify-content-between p-2" style="background-color: rgba(0, 0, 0, 0.2)">
                 </section>
                 <section class="">
                     <div class="container text-center text-md-start mt-5">
@@ -88,7 +88,7 @@
                                 <hr class="mb-4 mt-0 d-inline-block mx-auto"
                                     style="width: 60px; background-color: #7c4dff; height: 2px" />
                                 <p>
-                                    <a href="/landing_page" class="text-white">HANGMAN Game</a>
+                                    <a href="/home" class="text-white">HANGMAN Game</a>
                                 </p>
                             </div>
                             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
