added medium,hard modes

--- a/app/templates/defeat.html
+++ b/app/templates/defeat.html
@@ -4,6 +4,9 @@
 
 <div class="center-container">
     <h1 class="center-text">YOU LOST!</h1>
+    {% for message in get_flashed_messages() %}
+    <h2 class="defeat-message">{{ message }}</h2>
+    {% endfor %}
     <a href="/account" class="center-text" style="font-size:xx-large; color: #7c4dff">Account summary</a>
     <a href="/difficulties" class="center-text" style="font-size:xx-large; color: #7c4dff">Play again</a>
 </div>
