added images, made some utilities to make code nicer

--- a/app/templates/defeat.html
+++ b/app/templates/defeat.html
@@ -3,6 +3,9 @@
 {% block content %}
 
 <div class="center-container">
+    <div class="card-body text-center">
+        <img src="/static/stages/0.png" alt="avatar" class="rounded-circle img-fluid" style="width: 600px;">
+    </div>
     <h1 class="center-text">YOU LOST!</h1>
     {% for message in get_flashed_messages() %}
     <h2 class="defeat-message">{{ message }}</h2>
