--- a/app/templates/medium.html
+++ b/app/templates/medium.html
@@ -4,6 +4,9 @@
 
 
 <div class="center-container">
+    <div class="card-body text-center">
+        <img src={{image}} alt="avatar" class="rounded-circle img-fluid" style="width: 600px;">
+    </div>
     <a>All words are in lower case</a>
     <a style="font-size:large">Hint: {{ animal_type }}</a>
     <div>
