--- a/app/templates/difficulties.html
+++ b/app/templates/difficulties.html
@@ -4,8 +4,14 @@
 
 <div class="center-container">
     <legend class="border-bottom mb-4 text-center">Choose difficulty</legend>
-    <a class="center-text" href="/easy" style="color:rgba(0, 0, 0, 0.2)">EASY</a>
-    <a class="center-text" href="/medium" style="color:#1c2331">MEDIUM</a>
-    <a class="center-text" href="/hard" style="color:#7c4dff">HARD</a>
+    <h1 class="green-difficulty">
+        <a class="center-text" href="/easy" style="color:#1c2331; text-decoration:none">EASY</a>
+    </h1>
+    <h1 class="yellow-difficulty">
+        <a class="center-text" href="/medium" style="color:#1c2331; text-decoration:none">MEDIUM</a>
+    </h1>
+    <h1 class="red-difficulty">
+        <a class="center-text" href="/hard" style="color:#1c2331; text-decoration:none">HARD</a>
+    </h1>
 </div>
 {% endblock %}
