--- a/app/templates/easy.html
+++ b/app/templates/easy.html
@@ -35,7 +35,7 @@
         <div class="input-group mb-1">
             <input type="text" name="letter" maxlength="1" class="form-control" placeholder="Guess a letter "
                 aria-label="Letter" aria-describedby="button-addon2" required>
-            <button class="btn custom-login-button" type="submit" id="button-addon2">Submit</button>
+            <button class="game-button" type="submit" id="button-addon2">Submit</button>
         </div>
     </div>
 </form>
