--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,6 +3,10 @@
 {% block content %}
 
 <div class="center-container">
-    <a class="center-text" href="/difficulties" style="color:#1c2331">PLAY</a>
+    <div>
+        <h1>
+            <a class="center-text" href="/difficulties" style="color:#1c2331; text-decoration:none">PLAY</a>
+        </h1>
+    </div>
 </div>
 {% endblock %}
