--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -13,6 +13,22 @@ body {
     height: 200px
 }
 
+@media all and (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
+        display: none;
+    }
+
+    .navbar .nav-item:hover .nav-link {}
+
+    .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
+}
+
 .center-container {
     display: flex;
     flex-direction: column;
