--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,6 @@
 
     <title>HANGMAN</title>
 
-    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -20,54 +19,59 @@
 
 <body>
 
-    <div class="content-wrapper">
-        <nav class="navbar navbar-expand-lg static-top text-white" style="background-color: #1c2331">
-            <div class="container">
-                {% if current_user.is_authenticated %}
-                <a class="navbar-brand ms-auto text-white" href="/home">HOME</a>
-                {% else %}
-                <a class="navbar-brand ms-auto text-white" href="/">HOME</a>
-                {% endif %}
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        </li>
-                        {% if current_user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link">|</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="/account">Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="/logout">Logout</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link">|</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link text-white">|</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
+    <nav class="navbar navbar-expand-lg" style="background-color: #1c2331">
         <div class="container">
-            {% block content %}
-            {% endblock %}
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"
+                aria-expanded="false" aria-label="Toggle navigation" style="background-color: #1c2331">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="main_nav">
+                <ul class="navbar-nav">
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" style="font-size:larger" href="/home">HOME</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" style="font-size:larger" href="/">HOME</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+            <div class="collapse navbar-collapse" id="secondary_nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                            style="color: white; font-size:larger">
+                            MENU
+                        </a>
+                        <ul class="dropdown-menu" style="background-color: #1c2331; z-index: 1000;">
+                            {% if current_user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/account">Account</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/logout">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
+
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
     </div>
     <div class="footer-wrapper">
         <footer class="text-lg-start text-white" style="background-color: #1c2331">
