--- a/app/templates/leaderboards.html
+++ b/app/templates/leaderboards.html
@@ -25,7 +25,7 @@
                             <td class="text-left number">{{ count.value }} <i class="fa fa-caret-up"
                                     aria-hidden="true"></i></td>
                             <td class="text-left">
-                                <img src="/static/default_user.jpg" alt="default">
+                                <img src="{{user['picture_path']}}" alt="default">
                             </td>
                             <td>{{user["username"]}}</td>
                             <td>{{user["score"]}}</td>
