--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,6 +7,11 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Register</legend>
             <div class="form-group">
+                <div class="form-group">
+                    <a href="/profile_picture" class="btn btn-lg custom-login-button">Select Profile Picture</a>
+                </div>
+            </div>
+            <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
 
                 {% if form.username.errors %}
