--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,5 +8,6 @@
             <a class="center-text" href="/difficulties" style="color:#1c2331; text-decoration:none">PLAY</a>
         </h1>
     </div>
+    <a style="font-size:larger">Reveal tickets are given randomly after every victory</a>
 </div>
 {% endblock %}
