--- a/app/templates/leaderboards.html
+++ b/app/templates/leaderboards.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <section class="content-info">
-    <div class="container paddings-mini">
+    <div class="container-fluid paddings-mini">
         <div class="row">
-            <div class="col-lg-9">
+            <div class="col-lg-12">
                 <table class="table-striped table-responsive table-hover result-point">
                     <thead class="point-table-head">
                         <tr>
@@ -16,6 +16,8 @@
                             <th class="text-center">Games Played</th>
                             <th class="text-center">Games Won</th>
                             <th class="text-center">Games Lost</th>
+                            <th class="text-center">Tickets </th>
+                            <th class="text-center">Wrong guesses </th>
                         </tr>
                     </thead>
                     {% set count = namespace(value=1) %}
@@ -25,13 +27,15 @@
                             <td class="text-left number">{{ count.value }} <i class="fa fa-caret-up"
                                     aria-hidden="true"></i></td>
                             <td class="text-left">
-                                <img src="{{user['picture_path']}}" alt="default">
+                                <img style="height: 40px" src="{{user['picture_path']}}" alt="default">
                             </td>
                             <td>{{user["username"]}}</td>
                             <td>{{user["score"]}}</td>
                             <td>{{user["games_played"]}}</td>
                             <td>{{user["games_won"]}}</td>
                             <td>{{user["games_lost"]}}</td>
+                            <td>{{user["tickets"]}}</td>
+                            <td>{{user["wrong_guesses"]}}</td>
                         </tr>
                     </tbody>
                     {% set count.value = count.value + 1 %}
