--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -7,7 +7,7 @@
             <div class="card mb-4">
                 <div class="card-body text-center">
                     <img src="{{ user.profile_picture }}" alt="avatar" class="rounded-circle img-fluid"
-                        style="width: 150px;">
+                        style="width: 150px;height: 200px">
                     <h5 class="my-3">username - {{ user.username }}</h5>
                     <p class="text-muted mb-1">name - {{ user.name }}</p>
                     <p class="text-muted mb-4">surname - {{ user.surname }}</p>
@@ -71,6 +71,16 @@
                             <p class="text-muted mb-0">{{ user.wrong_guess_count}}</p>
                         </div>
                     </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="mb-0">Tickets</p>
+                        </div>
+                        <div class="col-sm-9">
+                            <p class="text-muted mb-0">{{ user.reveal_ticket}}</p>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </div>
         </div>
