--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -5,12 +5,15 @@ body {
     min-height: 100vh;
 }
 
+.content-wrapper {
+    flex: 1;
+    overflow-y: auto;
+}
+
 .footer-wrapper {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+
     width: 100%;
-    height: 200px
+
 }
 
 .horizontal-list {
@@ -85,6 +88,10 @@ body {
 }
 
 .reveal-error-message {
+    color: red
+}
+
+.purchase-error-message {
     color: red
 }
 
