--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -81,10 +81,40 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="mb-0">Credits</p>
+                        </div>
+                        <div class="col-sm-9">
+                            <p class="text-muted mb-0">{{ user.credits}}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     </div>
 </section>
+<div style="text-align: center; margin-bottom: 10px;">
+    <span style="font-size: larger;">Purchases:</span>
+</div>
+
+<table class="table">
+    <thead class="text-center">
+        <tr>
+            <th scope="col">Date</th>
+            <th scope="col">Price</th>
+            <th scope="col">Amount</th>
+        </tr>
+    </thead>
+    {% for transaction in transactions %}
+    <tbody class="text-center">
+        <tr>
+            <td>{{transaction.date}}</td>
+            <td>{{transaction.price}}</td>
+            <td>{{transaction.tickets}}</td>
+        </tr>
+    </tbody>
+    {% endfor %}
+</table>
 {% endblock %}
