--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,9 @@
                                 <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-white" href="/shop">SHOP</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-white" href="/account">Account</a>
                             </li>
                             <li class="nav-item">
@@ -68,9 +71,11 @@
         </div>
     </nav>
 
-    <div class="container">
-        {% block content %}
-        {% endblock %}
+    <div class="content-wrapper">
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
     </div>
     <div class="footer-wrapper">
