added gambling with credits

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,10 +48,13 @@
                         <ul class="dropdown-menu" style="background-color: #1c2331; z-index: 1000;">
                             {% if current_user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="/leaderboards">LEADERBOARDS</a>
+                                <a class="nav-link text-white" href="/leaderboards">Leaderboards</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="/shop">SHOP</a>
+                                <a class="nav-link text-white" href="/shop">Shop</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="/gamble">Gamble</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="/account">Account</a>
