--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,6 +8,7 @@
             <a class="center-text" href="/difficulties" style="color:#1c2331; text-decoration:none">PLAY</a>
         </h1>
     </div>
-    <a style="font-size:larger">Reveal tickets are given randomly after every victory</a>
+    <a style="font-size:larger">Reveal tickets and credits are given randomly after every victory</a>
+    <a style="font-size:larger">Also you can buy tickets and gamble your credits</a>
 </div>
 {% endblock %}
