--- a/app/templates/easy.html
+++ b/app/templates/easy.html
@@ -5,6 +5,10 @@
 
 <div class="center-container">
     <a style="font-size:larger">All words are in lower case</a>
+    <div>
+        <a class="center-text" style="font-size:medium;font-weight:bold ">Reveal tickets left - {{ user.reveal_ticket
+            }}</a>
+    </div>
     {% for message in get_flashed_messages() %}
     <h2 class="reveal-error-message">{{ message }}</h2>
     {% endfor %}
@@ -40,6 +44,7 @@
                 placeholder="Guess a letter " aria-label="Letter" aria-describedby="button-addon2" required>
             <button class="game-button" type="submit" id="button-addon2">Submit</button>
         </div>
+        <form action="{{ url_for('reveal_letter_easy') }}" method="POST"></form>
     </div>
 </form>
 <form action="{{ url_for('reveal_letter_easy') }}" method="POST">
