--- a/app/templates/hard.html
+++ b/app/templates/hard.html
@@ -5,6 +5,10 @@
 
 <div class="center-container">
     <a style="font-size:larger">All words are in lower case</a>
+    <div>
+        <a class="center-text" style="font-size:medium;font-weight:bold ">Reveal tickets left - {{ user.reveal_ticket
+            }}</a>
+    </div>
     {% for message in get_flashed_messages() %}
     <h2 class="reveal-error-message">{{ message }}</h2>
     {% endfor %}
