--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,10 +5,10 @@
 <div class="center-container">
     <div>
         <h1>
-            <a class="center-text" href="/difficulties" style="color:#1c2331; text-decoration:none">PLAY</a>
+            <a class="center-text" href="/difficulties" style="color:azure; text-decoration:none">PLAY</a>
         </h1>
     </div>
-    <a style="font-size:larger">Reveal tickets and credits are given randomly after every victory</a>
-    <a style="font-size:larger">Also you can buy tickets and gamble your credits</a>
+    <a style="font-size:larger; color:azure;">Reveal tickets and credits are given randomly after every victory</a>
+    <a style="font-size:larger; color:azure;">Also you can buy tickets and gamble your credits</a>
 </div>
 {% endblock %}
