--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="center-container">
-    <h2 class="center-text">HANGMAN</h2>
-    <legend class="center-text" style="font-size:xx-large">Animal edition</legend>
+    <h2 class="center-text" style="color:azure;">HANGMAN</h2>
+    <legend class="center-text" style="font-size:xx-large; color: azure">Animal edition</legend>
     </legend>
     <div class="center-buttons">
         <a href="/login" class="btn btn-lg custom-login-button">Login</a>
