--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,9 +17,9 @@
 
 </head>
 
-<body>
+<body style="background-image: url('../static/background.jpg'); background-size: cover;">
 
-    <nav class="navbar navbar-expand-lg" style="background-color: #1c2331">
+    <nav class=" navbar navbar-expand-lg" style="background-color: #1c2331">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"
                 aria-expanded="false" aria-label="Toggle navigation" style="background-color: #1c2331">
