--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,8 +5,8 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4 ">Login</legend>
-            <div class="form-group">
+            <legend class="border-bottom mb-4 " style="color:azure;">Login</legend>
+            <div class="form-group" style="color:azure;">
                 {{ form.username.label(class="form-control-label ") }}
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
@@ -19,7 +19,7 @@
                 {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -32,7 +32,7 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-check">
+            <div class="form-check" style="color:azure;">
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
             </div>
@@ -47,8 +47,8 @@
     </form>
 </div>
 <div class="border-top pt-3">
-    <small class="text-muted">
-        Do not Have An Account? <a class="ml-2" href="{{ url_for('register_user') }}">Sign In</a>
-    </small>
+    <a style="color:azure;">
+        Do not Have An Account? <a class="ml-2" style="color:azure;" href="{{ url_for('register_user') }}">Sign In</a>
+    </a>
 </div>
 {% endblock %}
