--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,14 +5,14 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Register</legend>
+            <legend class="border-bottom mb-4 " style="color:azure;">Register</legend>
             <div class="form-group">
                 <div class="form-group">
                     <a href="/profile_picture" class="btn btn-lg custom-login-button">Select Profile Picture</a>
                 </div>
             </div>
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
+            <div class="form-group" style="color:azure;">
+                {{ form.username.label(class="form-control-label" ) }}
 
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
@@ -25,7 +25,7 @@
                 {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.name.label(class="form-control-label") }}
 
                 {% if form.name.errors %}
@@ -39,7 +39,7 @@
                 {{ form.name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.surname.label(class="form-control-label") }}
 
                 {% if form.surname.errors %}
@@ -53,7 +53,7 @@
                 {{ form.surname(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
                 {{ form.email(class="form-control form-control-lg is-invalid") }}
@@ -66,7 +66,7 @@
                 {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -79,7 +79,7 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group" style="color:azure;">
                 {{ form.confirm_password.label(class="form-control-label") }}
                 {% if form.confirm_password.errors %}
                 {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
@@ -99,9 +99,9 @@
     </form>
 </div>
 <div class="border-top pt-3">
-    <small class="text-muted">
-        Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Login</a>
-    </small>
+    <a style="color:azure;">
+        Already Have An Account? <a class="ml-2" style="color:azure;" href="{{ url_for('login') }}">Login</a>
+    </a>
 </div>
 
 {% endblock %}
