updated readme and some html files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,7 +91,7 @@
                         <div class="row mt-3">
 
                             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                                <h6 class="text-uppercase fw-bold">AntanasGaming</h6>
+                                <h6 class="text-uppercase fw-bold">ProGaming</h6>
                                 <hr class="mb-4 mt-0 d-inline-block mx-auto"
                                     style="width: 60px; background-color: #7c4dff; height: 2px" />
                             </div>
@@ -124,7 +124,7 @@
                 <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                     © 2023 Copyright:
                     <a class="text-white"
-                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">AntanasProductions</a>
+                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">ProGaming</a>
                 </div>
             </div>
         </footer>
