--- a/app/templates/hard.html
+++ b/app/templates/hard.html
@@ -42,7 +42,8 @@
     <div class="center-div">
         <div class="input-group mb-1">
             <input pattern="[a-z]" type="text" name="letter" maxlength="1" class="form-control"
-                placeholder="Guess a letter " aria-label="Letter" aria-describedby="button-addon2" required>
+                placeholder="Guess a letter " aria-label="Letter" autocomplete="off" aria-describedby="button-addon2"
+                required>
             <button class="btn custom-login-button" type="submit" id="button-addon2">Submit</button>
         </div>
     </div>
