--- a/app/templates/profile_picture.html
+++ b/app/templates/profile_picture.html
@@ -4,7 +4,7 @@
 
 <div class="center-container">
 
-    <legend class="border-bottom mb-4 text-center" style="color:azure;">CHOOSE YOUR SPIRIT ANIMAL</legend>
+    <legend class="border-bottom mb-4 text-center" style="color:azure;">CHOOSE YOUR AVATAR</legend>
     <ul class="horizontal-list">
         <li><a href="{{url_for('register_user', type='Alien_guy')}}"><img src="/static/profile_pictures/Alien_guy.jpg"
                     class="rounded-circle img-fluid" style="width: 200px;height: 150px"></a>
